# heekscnc

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  CNCPoint.h  Contour.cpp  Contour.h  ContourStatics.cpp  HeeksCNC.cpp  HeeksCNCTypes.h  Inlay.cpp  Inlay.h  Pocket.cpp  Pocket.h  PythonStuff.h
unittest/: CMakeLists.txt  README
unittest/CContour_test/: CContour_test.cpp  CMakeLists.txt
unittest/brainstorm_test/: 201112171454_concentric_pockets.heeks  20120106-1411-inlay-baseline.heeks  20120106-1416-contour-baseline.heeks  20120107-1738-inlay-simple-buggy.heeks  20120113-0012-inlay-simple-buggy.heeks  CMakeLists.txt  brainstorm_test.cpp
